--- a/LottieSample/src/main/res/values/strings.xml
+++ b/LottieSample/src/main/res/values/strings.xml
@@ -34,10 +34,12 @@
     <string name="preview_title">Preview</string>
     <string name="preview_qr">Scan a QR code</string>
     <string name="preview_assets">Load from assets</string>
-    <string name="preview_svga">Load SVGA</string>
+    <string name="preview_svga">Load SVGA from assets</string>
     <string name="preview_svga_file">Load SVGA from file</string>
+    <string name="preview_svga_url">Load SVGA from url</string>
     <string name="preview_file">Open a file</string>
     <string name="preview_url">Enter a URL to a json or zip file</string>
+    <string name="preview_svga_url_hint">Enter a SVGA URL</string>
     <string name="preview_load">Load</string>
     <string name="preview_cancel">Cancel</string>
 
